# pyldt

./: .buildinfo  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README.rst  cli.html  debug-logconf.yml  docker.md  examples.html  features.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pysubyt.html  pysubyt.j2.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: cli.doctree  environment.pickle  examples.doctree  features.doctree  index.doctree  modules.doctree  pysubyt.doctree  pysubyt.j2.doctree
.github/workflows/: build_pages.yml  documentation.yml  pr_validation.yml  python-app.yml
_modules/: index.html
_modules/pysubyt/: api.html  sinks.html  sources.html  subyt.html
_sources/: examples.md.txt  index.rst.txt  modules.rst.txt  pysubyt.j2.rst.txt  pysubyt.rst.txt
docs/: cli-style.md  cli-usage.md  cli.md  conf.py  examples.md  features.md  index.rst  styleguide.md
examples/: subyt_conditional.py  subyt_duplicated_data_items.py  subyt_it.py  subyt_no-it.py
pre_docs/: conf.py
pyldt/: __init__.py  __main__.py  api.py  functions.py  generator.py  sinks.py  sources.py
pysubyt/: __init__.py  __main__.py  __version__.py  api.py  functions.py  sinks.py  sources.py  subyt.py
pysubyt/j2/: __init__.py  functions.py  generator.py
tests/: test_conditional.py  test_fn_ttl_format.py  test_generator.py  test_j2.py  test_processor.py  test_repeated_sink_paths.py  test_settings.py  test_sinks.py  util4tests.py
tests/in/: data.csv  data_digits.json  data_movies.xml  (+3 more)
(+31 files in other folders)
