[tool.poetry]
name = "pysubyt"
version = "0.0.2"
description = "Python implementation of LinkedData Templates to produce triples out of various datasources"
authors = ["Marc Portier <marc.portier@gmail.com>"]
readme = "README.md"
packages = [{include = "pysubyt"}]
license = "MIT"
repository = "https://github.com/vliz-be-opsci/pysubyt"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.dependencies]
python = "^3.8.1"
requests =  "*"
uritemplate =  "*"
validators =  "*"
typeguard =  "*"
python-dateutil =  "*"
xmlasdict =  "*"
jinja2 =  "*"
pyrdfj2 =  "*"
furo = "*"
recommonmark = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
poetry = "*"
isort = "*"
black = "*"
flake8 = "*"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pyyaml = "*"
pytest = "*"
coverage = "*"
python-dotenv = "*"
pytest-cov = "*"

[tool.poetry.scripts]
pysubyt = "pysubyt.__main__:main"

[build-system]
requires = ["setuptools","poetry"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests",]
pythonpath = ["."]
